added css stylesheet for tweets and refactored character counting code

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,10 +24,12 @@ body {
 main {
   position: relative;
   padding: 140px 0;
-  margin: 80px auto;
+  margin: 0 auto;
   width: 450px;
   background-color: white;
 }
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
