--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -64,18 +64,14 @@ article.tweet footer {
   height: 15%;
   font-size: .85em;
 }
-article.tweet footer img{
-  height:15px;
-  width: 15px;
+article.tweet footer div.images{
+  display: none;
   margin: 0 5px;
-  float: right;
-  opacity: .5;
-  filter: grayscale(100%);
+  float:right;
 }
 
-article.tweet:hover footer img{
-  opacity: 1;
-  filter: none;
+article.tweet:hover footer div.images{
+  display: inline-block;
 }
 
 article.tweet p {
