--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,7 +7,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1
+  z-index: 2
 }
 
 #nav-bar .logo {
@@ -23,7 +23,7 @@ nav {
   padding-left: 10px
 }
 
-#nav-bar #compose {
+#nav-bar .button {
   float:right;
   height: 60px;
   width: 120px;
@@ -32,7 +32,27 @@ nav {
   opacity: 0.5;
   border: solid black 1px;
 }
+#nav-bar .button a {
+  text-decoration: none;
+  color: black;
+}
 
-#nav-bar #compose:hover {
+#nav-bar .button:hover {
   opacity: 1;
+}
+
+div #error-message {
+  padding: 0 2em;
+  height: 40px;
+  width: 100%;
+  color: black;
+  background-color: #ff7575;
+  border-color: #ebccd1;
+  position: fixed;
+  margin-top: 80px;
+  left: 0px;
+  z-index: 1;
+  text-align: center;
+  line-height: 40px;
+  display: none
 }
