--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,26 +2,37 @@
   border:  1px solid black;
 }*/
 
+/*tweet Text box*/
+section textarea {
+ width: 94%;
+ height: 80px;
+ margin: 1.5% 3%;
+ padding: 5px;
+}
+
+/*"Tweet button"*/
+form input{
+  margin-left: 3%;
+  margin-bottom: 3%;
+}
+
+/*Whole new tweet */
 #new-tweet-container{
   border: solid;
   border-radius: 7px;
   border-color: #A0A0A0;
   border-width: 1px;
-  margin: 1em 2em;
+  margin: .75em 2em 1em 2em;
   background-color: #E8E8E8;
 }
 
+/*Compose Tweet Header*/
 .new-tweet h2 {
   border-bottom: 1px solid;
   margin: 4% 3%;
 }
 
-section textarea {
- width: 94%;
- margin: 0 3%;
- padding: 5px;
-}
-
+/*Character counter*/
 .counter {
 display: inline-block;
 float: right;
@@ -30,8 +41,4 @@ font-style: italic;
 font-size: 95%;
 }
 
-form input{
-  margin-left: 3%;
-  margin-bottom: 3%;
-}
 
