--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -28,9 +28,9 @@ nav {
 /*Buttons Style*/
 #nav-bar .button {
   float:right;
-  height: 60px;
-  width: 120px;
-  margin: 0.5em 10px;
+  height: 4em;
+  width: 8em;
+  margin: 0.5em .5em;
   border-radius: 7px;
   opacity: 0.5;
   border: solid black 1px;
@@ -61,4 +61,10 @@ div #error-message {
   text-align: center;
   line-height: 40px;
   display: none
+}
+
+@media (max-width: 420px) {
+#nav-bar .button {
+  display: none
+  }
 }
