--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -14,8 +14,10 @@ article.tweet:hover {
 }
 
 article.tweet header {
- background-color: #E8E8E8;
+ background-color:  #E8E8E8;
  height: 30%
+ border: solid #E8E8E8;
+ border-radius: 7px 7px 0 0;
 }
 
 /*Avatar picture*/
@@ -23,7 +25,7 @@ article.tweet header img{
   width: 2.5em;
   height: 2.5em;
   border-radius: 7px;
-  opacity: 0.5;
+  opacity: 0.75;
   border-width: 1px;
   margin: .25em;
 }
@@ -52,7 +54,7 @@ article.tweet header strong{
   vertical-align: top;
   font-size: 1.25em;
   color: #1c283a;
-  opacity: 0.5;
+  opacity: 0.75;
 }
 
 article.tweet:hover header strong {
@@ -70,7 +72,7 @@ article.tweet p {
 article.tweet footer {
   border-top: solid 1px;
   border-color: #A0A0A0;
-  padding: 5px 10px;
+  padding: .5em 1em;
   height: 20%;
   font-size: .85em;
 }
@@ -80,7 +82,30 @@ article.tweet footer div.images{
   margin: 0 5px;
   float:right;
 }
+article.tweet footer div.images button{
+  width: 2em;
+  height: 1.5em;
+}
 
 article.tweet:hover footer div.images{
   display: inline-block;
+}
+
+@media (max-width: 550px) {
+  #return-to-top {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+main {
+  width: 100%
+  }
+}
+
+
+@media(max-width: 315px){
+  article.tweet header span {
+    text-align: left;
+  }
 }
