refactored code to make formatting more consistent and added a date functionality to check how long ago the tweet was created

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -15,7 +15,7 @@ article.tweet:hover {
 
 article.tweet header {
  background-color:  #E8E8E8;
- height: 30%
+ height: 30%;
  border: solid #E8E8E8;
  border-radius: 7px 7px 0 0;
 }
